Update surefire version and arguments